# coq-playground

./: .gitignore  Makefile  README.md  _CoqProject  coq-playground.opam  index.html
.github/workflows/: build.yml
master/: indexpage.html  playground.base.html  playground.ln.html  playground.prelude.html  playground.stlc.html  playground.tactics.html  toc.html
master/custom/: custom.js
theories/: base.v  ln.v  prelude.v  stlc.v  tactics.v
