opam-version: "2.0"
maintainer: "yeqianchuan@gmail.com"
version: "dev"

homepage: "https://github.com/ccyip/coq-playground"
dev-repo: "git+https://github.com/ccyip/coq-playground.git"
bug-reports: "https://github.com/ccyip/coq-playground/issues"
license: "MIT"

authors: [
  "Qianchuan Ye"
]

build: [
  [make "-j%{jobs}%"]
]
install: [make "install"]

depends: [
  "ocaml"
  "coq" {>= "8.12"}
  "coq-stdpp" {>= "1.5.0"}
  "coq-hammer-tactics" {>= "1.3.1+8.12"}
]

synopsis: "Playground"
description: """
Testing random stuff
"""
tags: [
]
